Commitando exercícios de avaliação 1 de POO -C#

--- a/AvalicaoPOO-4sem/AvalicaoPOO-4sem.csproj
+++ b/AvalicaoPOO-4sem/AvalicaoPOO-4sem.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleAndFileLog.cs" />
+    <Compile Include="ConsoleLog.cs" />
+    <Compile Include="ILog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
